k8s/media-stack/base/apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-root
              mountPath: /export
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media-root
          persistentVolumeClaim:
            claimName: nfs-export-root
